index.html message mods

--- a/test/index.html
+++ b/test/index.html
@@ -195,7 +195,9 @@
           'Hover effects have been removed, and press animation ' +
           'has been added to all buttons.<br/>' +
           'See <a href="#sbtns">Sample Buttons</a>, above.' :
-          'This is not a touch-capable device, no changes made.';
+          '<span class="text-warning">' +
+            'This is not a touch-capable device, no changes made.' +
+          '</span>';
       }, 1000);
     });
   }
